Added folders for myGUI, Course and Student to separate the GUI components and the java objects

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CourseScheduler">
-        <activity android:name=".CourseActivity"></activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".myGIU.CourseActivity"></activity>
+        <activity android:name=".myGIU.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
