--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CourseScheduler">
-        <activity android:name=".myGIU.ScheduleActivity"></activity>
-        <activity android:name=".myGIU.CourseActivity" />
-        <activity android:name=".myGIU.MainActivity">
+        <activity android:name=".presentation.ScheduleActivity"></activity>
+        <activity android:name=".presentation.CourseActivity" />
+        <activity android:name=".presentation.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
