--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CourseScheduler">
         <activity android:name=".presentation.ScheduleActivity"></activity>
-        <activity android:name=".presentation.CourseActivity" />
+        <activity android:name=".presentation.CourseActivity"></activity>
         <activity android:name=".presentation.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
