Utilising the database Functionality for Login, Registration of user is complete. Once logged in the mainActivity page render the current user info.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,14 +12,14 @@
         <activity android:name=".presentation.ScheduleActivity"></activity>
         <activity android:name=".presentation.CourseActivity"></activity>
         <activity android:name=".presentation.MainActivity"></activity>
-        <activity android:name=".presentation.LoginActivity"></activity>
-        <activity android:name=".presentation.LoginActivityT">
+        <activity android:name=".presentation.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".presentation.RegisterActivity"></activity>
 
     </application>
 
