--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,14 +10,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CourseScheduler">
         <activity android:name=".presentation.ScheduleActivity"></activity>
-        <activity android:name=".presentation.CourseActivity"></activity>
-        <activity android:name=".presentation.MainActivity"></activity>
-        <activity android:name=".presentation.LoginActivity">
+        <activity android:name=".presentation.CourseActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".presentation.MainActivity"></activity>
+        <activity android:name=".presentation.LoginActivity">
+
         </activity>
         <activity android:name=".presentation.RegisterActivity"></activity>
 
