--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,12 +12,13 @@ android {
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
-        release {
+        debug {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
@@ -41,8 +42,9 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation files('lib/mysql-connector-java-8.0.22.jar')
-    testImplementation 'junit:junit:4.+'
+    testImplementation 'junit:junit:4.13.2.'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-
+    implementation 'com.basgeekball:awesome-validation:4.2'
+    implementation "androidx.multidex:multidex:2.0.1"
 }
