--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,20 +4,22 @@ plugins {
 
 android {
     compileSdkVersion 30
+    testOptions.unitTests.includeAndroidResources = true
     buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "com.example.coursescheduler"
         minSdkVersion 16
-        targetSdkVersion 30
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
-        release {
+        debug {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
@@ -37,12 +39,18 @@ android {
 
 dependencies {
 
+    implementation 'com.android.support:multidex:1.0.3'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation files('lib/mysql-connector-java-8.0.22.jar')
+    implementation 'androidx.room:room-runtime:2.2.6'
     testImplementation 'junit:junit:4.+'
+    androidTestImplementation 'junit:junit:4.13.2'
+    testImplementation "org.robolectric:robolectric:4.3.1"
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-
+    implementation "androidx.multidex:multidex:2.0.1"
+    androidTestImplementation 'androidx.test:rules:1.4.0-alpha05'
+    annotationProcessor 'androidx.room:room-compiler:2.2.6'
 }
